K8S/authors-np-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: authorsservice-srv
spec:
  type: NodePort
  selector:
    app: authorsservice
  ports:
    - name: authorsservice
      protocol: TCP
      port: 80
      targetPort: 80
